# glauth-qr-code-rust

./: Cargo.toml  README.md
src/: main.rs
templates/: error.hbs  invite.hbs  onboard.hbs  onboardonce.hbs
