[package]
name = "glauth_qr_code_rust"
version = "0.0.1"
authors = ["Your name <you@example.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
clap = "2.33"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3"
rand = "0.6"
data-encoding = "2.1"
rust-crypto = "^0.2"
rocket = "0.4.1"
rocket_contrib = { version="0.4.1", features=["handlebars_templates"] }
rusqlite = { version="0.18", features=["bundled"] }
uuid = { version="0.7", features=["v4"] }
qrcode = "0.10"
image = "0.21"
regex = "1"
lazy_static = "1.3"
maplit = "1.0.1"
