[package]
name = "glauth_qr_code_rust"
version = "0.0.2"
authors = ["Chris F Ravenscroft <chris@voilaweb.com>"]
description = "Generate QR Codes etc"
repository = "https://github.com/Fusion/glauth-qr-code-rust"
readme = "README.md"
keywords = ["qr", "glauth"]
categories = ["command-line-utilties"]
edition = "2018"

[dependencies]
clap = "2.33"
data-encoding = "2.1"
image = "0.21"
lazy_static = "1.3"
maplit = "1.0.1"
qrcode = "0.10"
rand = "0.6"
regex = "1"
rocket = "0.4.1"
rocket_contrib = { version = "0.4.1", features = ["handlebars_templates"] }
rusqlite = { version = "0.18", features = ["bundled"] }
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
slog = "2.4"
slog-async = "2.3"
slog-term = "2.4"
toml = "0.5"
uuid = { version = "0.7", features = ["v4"] }
